<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.gameLobby.GameLobbyFragment">

    <data>

        <variable
            name="viewModel"
            type="polymtl.equipe3.clientlegerv2.ui.gameLobby.GameLobbyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lobby_title"
            style="@style/LargeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/join_game"
            app:layout_constraintBottom_toTopOf="@+id/list_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lobby_title">

            <TextView
                style="@style/LargeTextWhite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="3dp"
                android:text="@string/game_name"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/LargeTextWhite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/game_mode"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/LargeTextWhite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/num_players"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintBottom_toTopOf="@+id/launch_game_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_elements"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:adapter="@{viewModel.getGameLobbyAdapter()}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/launch_game_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/play">

            </Button>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>