<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="polymtl.equipe3.clientlegerv2.ui.message.ChatViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mutableVisibility="@{viewModel.getLoadingVisibility()}" />

        <LinearLayout
            android:id="@+id/lay_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/lay_chat_bar"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/lay_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/messages"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/logout">

                </Button>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messages"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:adapter="@{viewModel.getChatAdapter()}"
                app:scrollTo="@{viewModel.scrollTo}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_chat_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/enter_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/entrez_message"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:text="@={viewModel.inputText}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/send_message"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.sendMessage()}"
                android:text="@string/envoyer"
                app:layout_constraintBottom_toBottomOf="@+id/enter_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/enter_message"
                app:layout_constraintTop_toTopOf="@+id/enter_message" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>